<resources>
    <string name="App_name">Mikve System</string>
    <string name="To_enter">Welcome\n Please enter </string>
    <string name="Price_normal">Entry Price:</string>
    <string name="Payment_details">Payment details</string>
    <string name="Price_month">Monthly Price:</string>
    <string name="Price_total">Total: </string>
    <string name="move_to_self_charger">Add Value</string>
    <string name="Pay_debt">Pay debt</string>
    <string name="More">Options</string>
    <string name="self_charge_mode">Add Value Mode</string>
    <string name="Fill_up_mode">Fill up mode</string>
    <string name="Total_paid">Total paid: </string>
    <string name="on_card">On card: </string>
    <string name="Expired_on">Expire on: %s</string>
    <string name="to_start_show_card">Tap card to add value</string>
    <string name="Please_present_parent_card">Please present parent card</string>
    <string name="Please_present_card_in_debt">Please present card in debt</string>
    <string name="mode_open">Now open</string>
    <string name="mode_close">Now closed,\n have a nice day</string>
    <string name="mode_vip_card">Now closed,\n Staff only</string>
    <string name="Custom_entry_accepts">Custom entry, Accepts:\n</string>
    <string name="mode_custom_cc_or_cash">To enter:\n* Pay cash or credit</string>
    <string name="mode_homeless">To enter:\n *Tap your card and pay cash</string>
    <string name="mode_custom_nothing">The mikve is closed, please return in open times</string>
    <string name="Card_balance" formatted="false">Card balance: %s</string>
    <string name="Fill_son">Pay for child</string>
    <string name="Buy_card">New card</string>
    <string name="Fill_up">Fill up</string>
    <string name="preparing_params">Preparing System Parameters</string>
    <string name="preparing_mode_zone">Preparing Mode Zone table</string>
    <string name="preparing_price_zone">Preparing Price Zone table</string>
    <string name="upgrading_firmware">Upgrading firmware\nPlease wait!</string>
    <string name="upgrading_">Upgrading..</string>
    <string name="upgrading_failed">Upgrad process failed</string>
    <string name="to_pay">Payment due:</string>
    <string name="mode">Mode</string>
    <string name="bill_types_header">Bill types allowed for use</string>
    <string name="bill_types_choose">Please choose bill types allowed to use</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="Days">Days</string>
    <string name="Begin_time">Begin Time</string>
    <string name="End_time">End Time</string>
    <string name="thank_you">Thank you</string>
    <string name="Welcome">Welcome</string>
    <string name="No_change_please_enter" formatted="false">Please enter  \n Paid %s , not enough change</string>
    <string name="No_change_donate" formatted="false">Please enter  \n Paid %s , \n Thank you for donating</string>
    <string name="please_enter_change_returned" formatted="false">Please enter  \n Paid %s ,\n returned %s</string>
    <string name="please_enter_no_change" formatted="false">Approved, Please Enter!  \n Paid %s </string>
    <string name="card_validity">Expiration date</string>
    <string name="card_value">Value left</string>
    <string name="no_exp">No expiration date</string>
    <string name="printing">Printing</string>
    <string name="print_please_wait">Printing.. Please wait</string>
    <string name="transaction_in_process">Another trasaction is in process</string>
    <string name="restore_default">Restore Default</string>
    <string name="has_been_restored_default">Success: The data has been restored to default</string>
    <string name="has_not_been_restored_default">Failure: The data has NOT been restored to default</string>
    <string name="process_canceled">Process has been canceled</string>
    <string name="cancel_process">Cancel Process</string>
    <string name="price_not_valid">Please insert valid price\nExample: 3 or 3.5</string>
    <string name="input_error">Input error</string>
    <string name="refill_cash_money">Refill cash money</string>
    <string name="refill_cash_money_please_press_to_exit">Please fill cash money machine \n Press end to finish refilling</string>
    <string name="loading_database">Loading database</string>
    <string name="waiting_for_peripherals">Waiting for control board</string>
    <string name="Sum">Sum</string>
    <string name="changes_saved">Changes were saved successfuly</string>
    <string name="title_activity_mikve">MainActivity</string>
    <string name="touch_to_cancel">Tap here to cancel</string>
    <string name="Button_more_mask">Show btn more</string>
    <string name="not_enough_change">Please insert exact amount</string>
    <string name="please_see_super">Please see super</string>
    <string name="wait_for_server">Processing, please wait</string>
    <string name="Display_card_only">Display card only</string>
    <string name="No_child_ascribed">No child card associated</string>
    <string name="No_debt_recorded">No debt recorded</string>
    <string name="Fill_form">Fill form</string>
    <string name="Not_supported">Not supported</string>
    <string name="No_card_left">No card left</string>
    <string name="System_offline">ystem offline, Please check connection or restart your network devices</string>
    <string name="Refund_accepted">Card refund accepted</string>
    <string name="paid_by_credit_card">Paid by credit:</string>
    <string name="card_has">Card balance:</string>
    <string name="refilled">Refilled</string>
    <string name="Donation">Donation</string>
    <string name="Take_card">Take card</string>
    <string name="Debt_paid">Debt paid</string>
    <string name="Debt_settled">Debt settled</string>
    <string name="entry_mode_title">Entry Mode</string>
    <string name="please_set_the_price_for_credit">Please set price for credit card</string>
    <string name="Set_charge_limit">Set charge limit</string>
    <string name="vip_card_please_enter">VIP card, Please enter!</string>
    <string name="no_change_save_on_card">Not enough change,The change will be saved on the card</string>
    <string name="unrecognized_fingerprint">Unrecognized fingerprint,Try again</string>
    <string name="default_friendly_name">Mikve</string>
    <string name="Insert_time">Insert time</string>
    <string name="Insert_preformed_by">Last insert preformed by</string>
    <string name="Just_entered">Just entered</string>
    <string name="Open_menu_mode">Menu opening mode</string>
    <string name="Credit_commission_entry">Commission for credit entry</string>
    <string name="Credit_commission_self_charge">Commission for credit charging</string>
    <string name="Entry_price">Entry Price</string>
    <string name="Bit_mask">Bit mask EM</string>
    <string name="Cellphone">Cellphone</string>
    <string name="Minimum_cash_charge_price">Minimum cash charge</string>
    <string name="Allowed_mifare_mask">Allowed mifare mask</string>
    <string name="Num_of_receipts">Number of receipts to print</string>
    <string name="Server_enable">Work online</string>
    <string name="Online">Online</string>
    <string name="Paid">Paid:</string>
    <string name="Cards">Cards</string>
    <string name="Spread_card_on_network" translatable="false">Card Spread</string>
    <string name="System_params">System parameters</string>
    <string name="transactionNumber">Transactions Number</string>
    <string name="cashCounter">Total Paid By Cash</string>
    <string name="entryByCashCounter">Total Entries By Cash</string>
    <string name="cashlessCounter">Total Paid Cashless</string>
    <string name="entryByCashlessCounter">Total Entries Cashless</string>
    <string name="mscCashCounter">Total Self charged</string>
    <string name="entryMscCashCounter">Total entries by cash card</string>
    <string name="entryMscMemberCounter">Total entries by member card</string>
    <string name="entryMscVipCounter">Total entries by VIP card</string>
    <string name="coinsInCashBox">Coins In Cash Box</string>
    <string name="coinsInTubes">Coins In Tubes</string>
    <string name="coinsInTubesCalc">Coins In Tubes calc</string>
    <string name="refilledCoinsInTubes">Refilled Coins In Tubes</string>
    <string name="billsInBillValidator">Bill In Bill Validator</string>
    <string name="Cnt_sms">Cnt sms</string>
    <string name="System_mode">System mode</string>
    <string name="Language">Language</string>
    <string name="Orientation">Orientation</string>
    <string name="Shabbat_info">Shabbat info</string>
    <string name="Cash_fillup">Cash fillup</string>
    <string name="Mifare_write_mode">Mifare write mode</string>
    <string name="Save_logs">Save logs</string>
    <string name="Allowed_bill_types">Allowed bill types</string>
    <string name="Calendar_type">Calendar type</string>
    <string name="Coin_validator_values">Coin validator values</string>
    <string name="Attend_limit">Attend limit</string>
    <string name="Command_set" translatable="false">Command set</string>
    <string name="Copy_cards">Copy cards</string>
    <string name="Enroll_finger">Enroll finger</string>
    <string name="Start_enrollment">Start enroll</string>
    <string name="Counters">Counters</string>
    <string name="Credit_card_service">Credit card service</string>
    <string name="Credit_card_service_client_password">Credit card service client password</string>
    <string name="Date">Date</string>
    <string name="Db_index" translatable="false">DB index</string>
    <string name="Default">Default</string>
    <string name="Dest_ip" translatable="false">Destination IP</string>
    <string name="Dest_port" translatable="false">Destination Port</string>
    <string name="Dhcp" translatable="false">DHCP</string>
    <string name="Recycler" translatable="false">Recycler</string>
    <string name="AntiPassBack" translatable="false">Anti pass back</string>
    <string name="Direction">Direction</string>
    <string name="Erev_hag_price">Erev Yom Tov</string>
    <string name="Friday_afternoon_price">Erev Shabbos</string>
    <string name="Friday_afternoon_time">Erev start time</string>
    <string name="Gate_feedback_timeout">Gate feedback timeout</string>
    <string name="Gateway_ip" translatable="false">Gateway ip</string>
    <string name="Hour_delta">Hour delta</string>
    <string name="Initiate_cards">Initiate cards</string>
    <string name="Ip" translatable="false">IP</string>
    <string name="Last_validity_extra_days">Last validity extra days</string>
    <string name="Manager_password">Manager password</string>
    <string name="show_card_to_change">Please tap card to change or set cards range</string>
    <string name="choose_cards_range">Choose cards range</string>
    <string name="cards_to">Up to:</string>
    <string name="cards_from">From card:</string>
    <string name="Card_type">Cards type</string>
    <string name="ok_range">OK cards range</string>
    <string name="card_number_with_number" formatted="false">Number: %d, Type: %s</string>
    <string name="save_changes">Save Changes</string>
    <string name="next_card">next card</string>
    <string name="Already_registered">Already registered</string>
    <string name="Cancel">Cancel</string>
    <string name="example_entry_price">Entry Price: $5.00</string>
    <string name="placeholder_date">Tue 8/2/2023</string>
    <string name="placeholder_time">10:58 AM</string>
    <string name="placeholder_language">קהל נצח ישראל</string>
    <string name="placeholder_logo_text">כ"ה אלול תשפ"ב</string>
    <string name="add_funds">Add Funds</string>
    <string name="options">Options</string>
    <string name="add_towel">Add Towel</string>
    <string name="press_for_english">Press for\n<b>English</b></string>
    <string name="other_language">דרוקט\n<b>פאר</b></string>
    <string name="powered_by">Distributed by: Lefkovits 718–436–8931</string>
    <string name="online">Online</string>
</resources>