<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/tvDate"
        style="@style/text_normal_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/placeholder_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTime"
        style="@style/text_normal_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/placeholder_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvOtherLanguage"
        style="@style/text_normal_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/placeholder_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".13" />

    <View
        android:id="@+id/viewLogo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:alpha="0.8"
        android:background="@drawable/ic_logo_bg"
        app:layout_constraintEnd_toEndOf="@id/tvOtherLanguage"
        app:layout_constraintStart_toStartOf="@id/tvDate"
        app:layout_constraintTop_toTopOf="@id/guidelineLogo" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/emblem"
        app:layout_constraintBottom_toBottomOf="@id/viewLogo"
        app:layout_constraintStart_toStartOf="@id/viewLogo"
        app:layout_constraintTop_toTopOf="@id/viewLogo"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/text_black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/placeholder_logo_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/viewLogo"
        app:layout_constraintEnd_toEndOf="@id/viewLogo"
        app:layout_constraintStart_toEndOf="@id/ivLogo"
        app:layout_constraintTop_toTopOf="@id/viewLogo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35" />

    <View
        android:id="@+id/viewDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:alpha="0.8"
        android:background="@drawable/ic_details_bg"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="-24dp"
        android:layout_marginBottom="-20dp"
        app:layout_constraintTop_toTopOf="@id/ivEntry"
        app:layout_constraintBottom_toBottomOf="@id/btnDonate" />

    <ImageView
        android:id="@+id/ivEntry"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineDetails"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvEntryPrice"
        style="@style/text_normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:drawableStart="@drawable/sparkle"
        android:drawableEnd="@drawable/sparkle"
        android:drawablePadding="24dp"
        android:text="@string/example_entry_price"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/viewDetails"
        app:layout_constraintStart_toStartOf="@id/viewDetails"
        app:layout_constraintTop_toBottomOf="@id/ivEntry" />

    <View
        android:id="@+id/viewPrice"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@id/tvEntryPrice"
        app:layout_constraintStart_toStartOf="@id/tvEntryPrice"
        app:layout_constraintTop_toBottomOf="@id/tvEntryPrice" />

    <TextView
        android:id="@+id/tvPaidLabel"
        style="@style/text_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/Paid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPrice" />

    <Button
        android:id="@+id/btnAddFunds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_buttons_background"
        android:drawableStart="@drawable/ic_options"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:paddingStart="12dp"
        android:paddingEnd="24dp"
        android:text="@string/add_funds"
        android:textAllCaps="false"
        android:textColor="@color/greyish"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/viewPrice"
        app:layout_constraintEnd_toStartOf="@id/btnOptions"
        app:layout_constraintTop_toBottomOf="@id/tvPaidLabel" />

    <Button
        android:id="@+id/btnOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ic_buttons_background"
        android:drawableStart="@drawable/ic_options"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:paddingStart="12dp"
        android:paddingEnd="24dp"
        android:text="@string/options"
        android:textAllCaps="false"
        android:textColor="@color/greyish"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAddFunds"
        app:layout_constraintEnd_toEndOf="@id/viewPrice"
        app:layout_constraintTop_toBottomOf="@id/tvPaidLabel" />

    <Button
        android:id="@+id/btnAddTowels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_buttons_background"
        android:drawableStart="@drawable/ic_options"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:paddingStart="12dp"
        android:paddingEnd="24dp"
        android:text="@string/add_towel"
        android:textAllCaps="false"
        android:textColor="@color/greyish"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/btnAddFunds"
        app:layout_constraintEnd_toStartOf="@id/btnDonate"
        app:layout_constraintTop_toBottomOf="@id/btnAddFunds" />

    <Button
        android:id="@+id/btnDonate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ic_buttons_background"
        android:drawableStart="@drawable/ic_options"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:paddingStart="12dp"
        android:paddingEnd="24dp"
        android:text="@string/Donation"
        android:textAllCaps="false"
        android:textColor="@color/greyish"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btnAddTowels"
        app:layout_constraintEnd_toEndOf="@id/viewPrice"
        app:layout_constraintTop_toBottomOf="@id/btnOptions" />

    <Button
        android:id="@+id/btnEnglish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:background="@drawable/ic_blue_buttons_bg"
        android:text="@string/press_for_english"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:alpha="0.8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/viewDetails"
        app:layout_constraintEnd_toStartOf="@id/btnOtherLanguage"
        app:layout_constraintTop_toBottomOf="@id/viewDetails" />

    <Button
        android:id="@+id/btnOtherLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_blue_buttons_bg"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:text="@string/other_language"
        android:paddingTop="12dp"
        android:paddingBottom="8dp"
        android:alpha="0.8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btnEnglish"
        app:layout_constraintEnd_toEndOf="@id/viewDetails"
        app:layout_constraintTop_toBottomOf="@id/viewDetails" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/ic_powered_by_bg"
        android:layout_marginTop="-12dp"
        app:layout_constraintTop_toTopOf="@id/tvPoweredBy"
        app:layout_constraintBottom_toBottomOf="parent" />


    <TextView
        android:id="@+id/tvPoweredBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powered_by"
        android:textSize="14sp"
        android:textColor="@color/greyish"
        android:layout_marginBottom="8dp"
        android:drawableStart="@drawable/sphere"
        android:drawablePadding="16dp"
        app:layout_constraintStart_toStartOf="@id/viewDetails"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online"
        android:textSize="14sp"
        android:textColor="@color/greyish"
        android:layout_marginBottom="8dp"
        android:drawablePadding="16dp"
        app:layout_constraintEnd_toEndOf="@id/viewDetails"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>