<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/size_small_2"
    android:paddingLeft="@dimen/size_small_2"
    android:paddingRight="@dimen/size_small_2"
    android:paddingTop="@dimen/size_small_2"
    android:windowSoftInputMode="adjustResize"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_unique"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/size_small_2"
        android:paddingLeft="@dimen/size_small_2"
        android:paddingRight="@dimen/size_small_2"
        android:paddingTop="@dimen/size_small_2"
        android:windowSoftInputMode="adjustResize">

        <LinearLayout
            android:id="@+id/ll_headers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_header"
                style="@style/text_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:textSize="@dimen/size_medium_4" />

            <TextView
                android:id="@+id/tv_show_card"
                style="@style/text_normal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:gravity="center"
                android:text="@string/show_card_to_change"
                android:textSize="@dimen/size_medium_2" />

<!--<TextView-->
<!--    android:id="@+id/tv_copy_remark"-->
<!--    android:layout_width="fill_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:gravity="center"-->
<!--    android:textColor="@color/red"-->
<!--    android:background="@color/yellow"-->
<!--    android:text="@string/Copy_card_remark"-->
<!--    android:textSize="@dimen/size_small_6" />-->

            <Button
                android:id="@+id/btn_range"
                style="@style/button_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:text="@string/choose_cards_range" />

            <Button
                android:id="@+id/btn_already_registered"
                style="@style/button_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:text="@string/Already_registered"
                android:textSize="@dimen/size_medium_4"
                android:visibility="gone" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_cards_range"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"

        >

   <mid.uicomp.AutoResizeTextView
       android:id="@+id/et_cards_from_lbl"
       android:layout_width="match_parent"
       android:layout_height="@dimen/size_medium_7"
       android:gravity="center|right"
       android:padding="5dp"
       android:text="@string/cards_from"
       android:maxLines="2"
       android:textSize="@dimen/size_medium_2"
       android:layout_weight="1"
       style="@style/text_normal"
       />
        
       <TextView
            android:id="@+id/et_cards_from"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_medium_7"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="@dimen/size_medium_3"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_weight="1"
            style="@style/text_view_rounded_corners"
         />

    <mid.uicomp.AutoResizeTextView
          android:id="@+id/et_cards_to_lbl"
          android:layout_width="match_parent"
          android:layout_height="@dimen/size_medium_7"
          android:gravity="center"
          android:padding="5dp"
          android:text="@string/cards_to"
          android:textSize="@dimen/size_medium_2"
          android:layout_weight="1"
          style="@style/text_normal"
          />
        
       <TextView
            android:id="@+id/et_cards_to"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_medium_7"
            android:gravity="center_vertical|center"
            android:padding="5dp"
            android:textSize="@dimen/size_medium_3"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_weight="1"
             style="@style/text_view_rounded_corners"
             />
          
       <TextView
            android:id="@+id/spn_card_type_lbl"
             android:layout_width="match_parent"
             android:layout_height="@dimen/size_medium_7"
             android:gravity="center"
             android:layout_margin="3dp"
             android:padding="5dp"
             android:text="@string/Card_type"
             android:textSize="@dimen/size_small_7"
             android:layout_weight="1"
             style="@style/text_normal"
             />

          
        <TextView
            android:id="@+id/spn_card_type"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_medium_7"
            android:layout_gravity="right|center_vertical"
            android:gravity="center"
            android:layout_margin="7dp"
            android:padding="5dp"
            android:textSize="@dimen/size_medium_1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_weight="1"
            android:enabled="false"
            style="@style/text_view_rounded_corners"
            />

    </LinearLayout>

        <Button
            android:id="@+id/btn_range_ok"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="7dp"

            android:padding="@dimen/size_small_7"
            android:text="@string/ok_range"
            android:visibility="gone"
            style="@style/button_normal"
            />

        <TextView
            android:id="@+id/tv_card_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/card_number_with_number"
            android:textSize="@dimen/size_medium_2"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:visibility="gone"
            style="@style/text_normal"
            />

        <ListView
            android:id="@+id/lv_loader_properties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="10dp"
            android:layout_weight="100"
            android:padding="20dp"
            android:visibility="gone"
            />

        <GridView
            android:id="@+id/gv_loader_properties"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="5dp"
            android:layout_weight="100"

            android:numColumns="5"

            android:visibility="invisible"></GridView>

        <LinearLayout
            android:id="@+id/ll_button"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/size_large_1"
            android:layout_marginTop="10dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btn_save"
                style="@style/button_blue"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="@dimen/size_small_5"

                android:layout_marginRight="@dimen/size_small_5"
                android:layout_weight="0.3"
                android:drawableLeft="@drawable/checkmark"
                android:drawableStart="@drawable/checkmark"

                android:enabled="false"
                android:padding="@dimen/size_small_4"
                android:paddingEnd="@dimen/size_medium_1_1"
                android:paddingStart="@dimen/size_medium_1_1"
                android:text="@string/save_changes"
                android:textSize="@dimen/size_medium_2" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/size_small_5"
            android:layout_marginRight="@dimen/size_small_5"

            android:drawableStart="@drawable/next_right"
            android:drawableLeft="@drawable/next_right"
            android:paddingEnd="@dimen/size_medium_1_1"
            android:paddingStart="@dimen/size_medium_1_1"

            android:enabled="false"
            android:padding="@dimen/size_small_4"
            android:text="@string/next_card"
            android:textSize="@dimen/size_medium_2"
            android:layout_weight="0.3"
            style="@style/button_blue"
            />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/size_small_5"
            android:layout_marginRight="@dimen/size_small_5"

            android:drawableStart="@drawable/cancel"
            android:drawableLeft="@drawable/cancel"
            android:paddingEnd="@dimen/size_medium_1_1"
            android:paddingStart="@dimen/size_medium_1_1"

            android:padding="@dimen/size_small_4"
            android:text="@string/Cancel"
            android:textSize="@dimen/size_medium_2"
            android:layout_weight="0.3"
            style="@style/button_blue"
            />
    </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_msg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:visibility="gone"
        />

</RelativeLayout>